# todolist_backend

./: .env  Cargo.toml
src/: config.rs  main.rs
src/auth/: mod.rs  routes.rs
src/routes/: mod.rs  routes.rs
