[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6", features = ["macros"]}
chrono = "0.4.42"
chrono-tz = "0.10.4"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full"]}
uuid = {version = "1.18.1", features = ["v4"]}
tower = "0.5.2"
axum-extra = { version = "0.12.1", features = ["cookie"] }
jsonwebtoken = {version = "10.1.0", features = ["rust_crypto"]}
tower-http = { version = "0.6.6", features = ["cors"] }
